--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -2,6 +2,10 @@
 
 <ul>
   <% @places.each do |place| %>
-    <li><%= link_to place.name, place_path(place) | place.address | place.notes %></li>
+    <li><%= link_to place.name, place_path(place)%></li>
   <% end %>
 </ul>
+
+<p>
+  <%= link_to "Add a new place", new_place_path %>
+</p>
